fix : bug on properties values alignment

--- a/src/app/componentes/modal-tarefa/modal-tarefa.component.scss
+++ b/src/app/componentes/modal-tarefa/modal-tarefa.component.scss
@@ -87,7 +87,7 @@
 }
 
 .propertie {
-    @apply flex w-full gap-4 h-11 items-center 
+    @apply flex w-full gap-4 h-11 items-start 
 }
 
 .propertie-value {
