--- a/src/app/componentes/propriedade-tarefa/propriedade-tarefa.component.scss
+++ b/src/app/componentes/propriedade-tarefa/propriedade-tarefa.component.scss
@@ -1,5 +1,5 @@
 .propertie {
-    @apply flex w-full items-center gap-4 h-11
+    @apply flex w-full items-start gap-4 h-11
 }
 
 .propertie-value {
